<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.structure.app.structuremvp.views.activity.changepassword.ChangePasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:elevation="@dimen/_15sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:text="@string/change_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sdp" />

                <com.structure.app.structuremvp.views.customview.CustomTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/old_password"
                    android:textSize="@dimen/_13sdp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_old_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="40"
                        android:singleLine="true"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/_14sdp" />

                </com.structure.app.structuremvp.views.customview.CustomTextInputLayout>


                <com.structure.app.structuremvp.views.customview.CustomTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/new_password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/_15sdp" />
                </com.structure.app.structuremvp.views.customview.CustomTextInputLayout>

                <com.structure.app.structuremvp.views.customview.CustomTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/confirm_password">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/_15sdp" />
                </com.structure.app.structuremvp.views.customview.CustomTextInputLayout>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/tv_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/btn_login_selctor"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/submit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</layout>